- Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units

* RELEASE 18B
- Fix Wake/Activate replacement not working on Steam version

* RELEASE 18
- Unit limits
- Expand AI two-city start to any number of cities
  - Config option has been renamed to ai_multi_city_start
- AI's starter cities in multi-city start can begin with improvements, inc. "extra palaces" which respawn like the real palace
- Right-click menu enhancements
  - Place icons next to units showing movement and combat status
  - Replace Wake/Activate with descriptions of what the units are doing
  - Gray out units if they have no remaining moves
  - Stop grouping automated and non-automated workers
- Can set multiplier on AI research rate (replaces halve_ai_research_rate)
- Option to allow upgrades in any city
- Option to stop the map generator from placing volcanos
- Apply GridOn setting from conquests.ini after loading a save
- Fix resource generation not always updated after an input was gained or lost due to city improv change
- Rework some code related to resource generation and trade to improve stability and efficiency

* RELEASE 17C
- Fix crashes and strange behavior caused by use-after-free bug in config loader

* RELEASE 17
- Optimize computation of trade networks
  - For details, see the info text file in the Trade Net X folder
- Civ and leader names can vary by era
- Option to measure turn times
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz
  - Naval units in a city may perform defensive bombard vs land attackers